# Hackathon

./: Dockerfile  app.py  inference.py  pyproject.toml  requirements.txt
baseline/: inference.py
email-triage-env/: Dockerfile  README.md  app.py  inference.py  openenv.yaml
email-triage-env/env/: __init__.py  models.py  tasks.py
email-triage-env/env/data/: emails.json
env/: environment.py  tasks.py
server/: app.py
tests/: test_env.py
